--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   carousel_slider: ^5.1.1
   lottie: ^3.3.1
+  http: ^1.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
